k8s/05_cluster-features/05_argo-cd/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.200
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.local.naguiar.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
          scheme: http
  tls:
    secretName: certificate-tls
